--- a/tmdb-ios/Base.lproj/Main.storyboard
+++ b/tmdb-ios/Base.lproj/Main.storyboard
@@ -1,24 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1b2-qi-J7b">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="IDLoginViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rVN-th-rrD">
+                                <rect key="frame" x="92.666666666666686" y="542" width="208" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="208" id="WNY-iW-tIU"/>
+                                    <constraint firstAttribute="height" constant="52" id="dju-pg-Moe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="46v-vU-XPe">
+                                <rect key="frame" x="92.666666666666686" y="614" width="208" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="52" id="d29-Qz-OMS"/>
+                                    <constraint firstAttribute="width" constant="208" id="mfL-jS-DQg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="dIp-Sa-7E9">
+                                <rect key="frame" x="124.66666666666669" y="362" width="144" height="127"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="127" id="JHT-Oc-xUU"/>
+                                    <constraint firstAttribute="width" constant="144" id="f0Y-vo-3k7"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login" translatesAutoresizingMaskIntoConstraints="NO" id="iMp-H0-Jgb" userLabel="Hero">
+                                <rect key="frame" x="0.0" y="63" width="393" height="279"/>
+                                <color key="backgroundColor" systemColor="labelColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="279" id="OoZ-dD-KZQ"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WbA-Bi-Ui3">
+                                <rect key="frame" x="92.666666666666686" y="686" width="208" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="208" id="18v-X8-gvh"/>
+                                    <constraint firstAttribute="height" constant="52" id="Clq-3m-QO4"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Log in">
+                                    <color key="baseBackgroundColor" red="0.12941176470588234" green="0.80392156862745101" blue="0.396078431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </buttonConfiguration>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vUP-dH-YdG" userLabel="GradientView">
+                                <rect key="frame" x="0.0" y="297" width="393" height="60"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="6u5-if-7ii"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="dIp-Sa-7E9" firstAttribute="top" secondItem="iMp-H0-Jgb" secondAttribute="bottom" constant="20" id="46H-rw-2KT"/>
+                            <constraint firstItem="rVN-th-rrD" firstAttribute="top" relation="greaterThanOrEqual" secondItem="dIp-Sa-7E9" secondAttribute="bottom" constant="20" id="4I7-dV-fLT"/>
+                            <constraint firstItem="dIp-Sa-7E9" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="9Vy-0m-YXL"/>
+                            <constraint firstItem="WbA-Bi-Ui3" firstAttribute="top" secondItem="46v-vU-XPe" secondAttribute="bottom" constant="20" id="BXk-iZ-ylC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iMp-H0-Jgb" secondAttribute="trailing" id="CbG-yQ-ltP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="iMp-H0-Jgb" secondAttribute="top" constant="40" id="Dkk-5z-LaG"/>
+                            <constraint firstItem="vUP-dH-YdG" firstAttribute="top" secondItem="iMp-H0-Jgb" secondAttribute="bottom" constant="-45" id="HYX-fx-G8h"/>
+                            <constraint firstItem="vUP-dH-YdG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Kxm-0o-MJg"/>
+                            <constraint firstItem="vUP-dH-YdG" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="WeR-kM-6h3"/>
+                            <constraint firstItem="rVN-th-rrD" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="cYj-Kf-462"/>
+                            <constraint firstItem="46v-vU-XPe" firstAttribute="top" secondItem="rVN-th-rrD" secondAttribute="bottom" constant="20" id="fiz-NM-aFY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vUP-dH-YdG" secondAttribute="trailing" id="htt-sI-o4m"/>
+                            <constraint firstItem="46v-vU-XPe" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="kpi-bz-BmZ"/>
+                            <constraint firstItem="WbA-Bi-Ui3" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="lYQ-c3-5CP"/>
+                            <constraint firstItem="iMp-H0-Jgb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oBY-xY-Qa8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="WbA-Bi-Ui3" secondAttribute="bottom" constant="80" id="vAp-RV-gTI"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="SQg-ke-Tan"/>
+                    <connections>
+                        <outlet property="gradientView" destination="vUP-dH-YdG" id="tri-es-zeA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1066.4122137404579" y="-2.1126760563380285"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="0dO-nG-wtZ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1b2-qi-J7b" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Afp-UH-acw">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Wq2-ve-IKP"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OPh-yk-Hde" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="139.69465648854961" y="-2.1126760563380285"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="login" width="281.5" height="209.5"/>
+        <image name="logo" width="144" height="127"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
